working on contact form

--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
               
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav ms-auto me-4 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                      <li class="nav-item"><a class="nav-link" href="academics.html">My Story</a></li>
-                      <li class="nav-item"><a class="nav-link" href="student.html">Skills</a></li>
-                      <li class="nav-item"><a class="nav-link" href="cost.html">Contact Me</a></li>
+                      <li class="nav-item"><a class="nav-link text-light" href="academics.html">My Story</a></li>
+                      <li class="nav-item"><a class="nav-link  text-light" href="student.html">Skills</a></li>
+                      <li class="nav-item"><a class="nav-link text-light" href="contact.html">Contact Me</a></li>
                     </ul>
                   </div>
                 </div>
@@ -47,7 +47,7 @@
         <div class="container">
   
           <div class="section-header">
-            <h2>Contact Us</h2>
+            <h2 class="text-light">Contact Us</h2>
             <p>Experience the difference of working with DHA Contracting. Contact us today to discuss your scoreboard,
               videoboard, or
               message center installation needs, and let us bring your vision to life.</p>
@@ -107,7 +107,7 @@
                   <div class="sent-message">Thank you for reaching out, Someone will be in contact with you ASAP about
                     your email.</div>
                 </div>
-                <div class="text-center"><button type="submit" onclick="gtag_report_conversion()">Send Message</button>
+                <div class="text-center"><button type="submit" class="message" onclick="gtag_report_conversion()">Send Message</button>
                 </div>
               </form>
   
