--- a/index.html
+++ b/index.html
@@ -56,6 +56,46 @@
                 </div>
             </div>
         </div>
+        <div class="timeline-wrapper">
+          <div class="timeline">
+            <li data-date="Jan 7, 2022">
+              <span class="title">Mother's Birthday</span>
+              <div class="data">
+                <h3>Day you've been waiting for</h3>
+                <small>Jan 7, 2021</small>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
+                <span class="close">Click to Close</span>
+              </div>
+            </li>
+            <li data-date="Jan 7, 2022">
+              <span class="title">Mother's Birthday</span>
+              <div class="data">
+                <h3>Day you've been waiting for</h3>
+                <small>Jan 7, 2021</small>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
+                <span class="close">Click to Close</span>
+              </div>
+            </li>
+            <li data-date="Jan 7, 2022">
+              <span class="title">Mother's Birthday</span>
+              <div class="data">
+                <h3>Day you've been waiting for</h3>
+                <small>Jan 7, 2021</small>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
+                <span class="close">Click to Close</span>
+              </div>
+            </li>
+            <li data-date="Jan 7, 2022">
+              <span class="title">Mother's Birthday</span>
+              <div class="data">
+                <h3>Day you've been waiting for</h3>
+                <small>Jan 7, 2021</small>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
+                <span class="close">Click to Close</span>
+              </div>
+            </li>
+          </div>
+        </div>
             <div id="vue_app">
                 <h2 class="examples" id="past">Past Websites</h2>
                 <div class="pages">
@@ -105,6 +145,6 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
-        ></script>
+        ></script><script src="script.js"></script>
     </body>
 </html>
