still working on the timeline and created json file for images

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav ms-auto me-4 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                  <li class="nav-item"><a class="nav-link text-light" href="academics.html">My Story</a></li>
-                  <li class="nav-item"><a class="nav-link  text-light" href="student.html">Skills</a></li>
+                  <li class="nav-item"><a class="nav-link text-light" href="index.html">My Story</a></li>
+                  <li class="nav-item"><a class="nav-link  text-light" href="skills.html">Skills</a></li>
                   <li class="nav-item"><a class="nav-link text-light" href="contact.html">Contact Me</a></li>
                 </ul>
               </div>
@@ -56,8 +56,9 @@
                 </div>
             </div>
         </div>
+       <div class="scroll">
         <div class="timeline-wrapper">
-          <div class="timeline">
+          <ul class="timeline">
             <li data-date="Jan 7, 2022">
               <span class="title">Mother's Birthday</span>
               <div class="data">
@@ -94,8 +95,27 @@
                 <span class="close">Click to Close</span>
               </div>
             </li>
-          </div>
+            <li data-date="Jan 7, 2022">
+              <span class="title">Mother's Birthday</span>
+              <div class="data">
+                <h3>Day you've been waiting for</h3>
+                <small>Jan 7, 2021</small>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
+                <span class="close">Click to Close</span>
+              </div>
+            </li>
+            <li data-date="Jan 7, 2022">
+              <span class="title">Mother's Birthday</span>
+              <div class="data">
+                <h3>Day you've been waiting for</h3>
+                <small>Jan 7, 2021</small>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
+                <span class="close">Click to Close</span>
+              </div>
+            </li>
+          </ul>
         </div>
+       </div>
             <div id="vue_app">
                 <h2 class="examples" id="past">Past Websites</h2>
                 <div class="pages">
