--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
               
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav ms-auto me-4 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                      <li class="nav-item"><a class="nav-link text-light" href="academics.html">My Story</a></li>
-                      <li class="nav-item"><a class="nav-link  text-light" href="student.html">Skills</a></li>
+                      <li class="nav-item"><a class="nav-link text-light" href="index.html">My Story</a></li>
+                      <li class="nav-item"><a class="nav-link  text-light" href="skills.html">Skills</a></li>
                       <li class="nav-item"><a class="nav-link text-light" href="contact.html">Contact Me</a></li>
                     </ul>
                   </div>
