started skills page and uploaded icons

--- a/skills.html
+++ b/skills.html
@@ -41,7 +41,17 @@
                 </div>
               </nav>
         </header>
-        <main></main>
+        <main>
+          <div class="skills">
+          <h1 class="banner">My Skills</h1>
+          <h3 class="instruction">Click each icon below to find out more</h3>
+          <div class="row">
+            <div class="col-lg-4">
+              
+            </div>
+          </div>
+        </div>
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
