added the what i learned section on skills page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h1 class="display-1">A Videographer</h1>
                     <div class="click">
                         <a href="#past"><button class="about btn btn-light">About Me</button></a>
-                        <button class="contact btn btn-outline-light">Contact Me</button>
+                        <a href="contact.html"><button class="contact btn btn-outline-light">Contact Me</button></a>
                     </div>
                 </div>
             </div>
