--- a/skills.html
+++ b/skills.html
@@ -45,12 +45,31 @@
           <div class="skills">
           <h1 class="banner">My Skills</h1>
           <h3 class="instruction">Click each icon below to find out more</h3>
-          <div class="row">
-            <div class="col-lg-4">
-              
+          <div class="container1">
+            <div class="row" id="about">
+              <div class="col-4 col-lg-4 text-center info">
+                <img class="emoji" src="img/special-effects-icon-2048x2048-o197xkfs 1.png" alt="" srcset="">
+              </div>              
+              <div class="col-4 col-lg-4 text-center info">
+                <img class="emoji" src="img/camera.png" alt="" srcset="">
+              </div>
+              <div class="col-4 col-lg-4 text-center info">
+                <img class="emoji" src="img/Adobe Express - file (5).png" alt="" srcset="">
+              </div>  
             </div>
           </div>
-        </div>
+            </div>
+            <div class="container mt-5">
+              <h1 class="banner">What I learned</h1>
+              <div class="row info-row d-flex justify-content-center align-items-center">
+                <div class="offer-image col-12 col-lg-6"></div>
+                <div class="offer-text col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
+                    <h1 class="text-center info-title">How it Helped
+                    <div class="info-section text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam illo accusantium eaque. Ipsa illo vitae deleniti praesentium veniam ullam similique officiis, quidem impedit eius id provident neque. Laudantium, adipisci sit.
+                    </div>
+                </div>
+            </div>
+            </div>
         </main>
         <footer>
             <!-- place footer here -->
