implemented changing image and fade animation when different icon is clicked

--- a/skills.html
+++ b/skills.html
@@ -71,8 +71,8 @@
             <div class="container mt-5" >
               <h1 class="banner">What I learned</h1>
               <div class="row info-row d-flex justify-content-center align-items-center">
-                <div class="offer-image col-12 col-lg-6" id="learn"></div>
-                <div class="offer-text col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
+                <div class="skills-image col-12 col-lg-6" id="learn"></div>
+                <div class="skills-text col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center">
                   <h1 class="text-center info-title" id="change-title">How it Helped</h1>
                   <div class="info-section text-center">Click an icon above to see more info!</div>
                 </div>
