started carousel and uploaded past works

--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
                   </div>
                 </div>
               </div>
-            </div>
         </main>
 <!-- Footer -->
 <footer class="text-center text-lg-start text-muted">
@@ -274,6 +273,8 @@
 </footer>
 <!-- Footer -->
         <!-- Bootstrap JavaScript Libraries -->
+        <script src="https://unpkg.com/vue@3"></script>
+
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
