fixed issues with merging

--- a/index.html
+++ b/index.html
@@ -56,67 +56,8 @@
                 </div>
             </div>
         </div>
-       <div class="scroll">
-        <div class="timeline-wrapper">
-          <ul class="timeline">
-            <li data-date="Jan 7, 2022">
-              <span class="title">Mother's Birthday</span>
-              <div class="data">
-                <h3>Day you've been waiting for</h3>
-                <small>Jan 7, 2021</small>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
-                <span class="close">Click to Close</span>
-              </div>
-            </li>
-            <li data-date="Jan 7, 2022">
-              <span class="title">Mother's Birthday</span>
-              <div class="data">
-                <h3>Day you've been waiting for</h3>
-                <small>Jan 7, 2021</small>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
-                <span class="close">Click to Close</span>
-              </div>
-            </li>
-            <li data-date="Jan 7, 2022">
-              <span class="title">Mother's Birthday</span>
-              <div class="data">
-                <h3>Day you've been waiting for</h3>
-                <small>Jan 7, 2021</small>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
-                <span class="close">Click to Close</span>
-              </div>
-            </li>
-            <li data-date="Jan 7, 2022">
-              <span class="title">Mother's Birthday</span>
-              <div class="data">
-                <h3>Day you've been waiting for</h3>
-                <small>Jan 7, 2021</small>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
-                <span class="close">Click to Close</span>
-              </div>
-            </li>
-            <li data-date="Jan 7, 2022">
-              <span class="title">Mother's Birthday</span>
-              <div class="data">
-                <h3>Day you've been waiting for</h3>
-                <small>Jan 7, 2021</small>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
-                <span class="close">Click to Close</span>
-              </div>
-            </li>
-            <li data-date="Jan 7, 2022">
-              <span class="title">Mother's Birthday</span>
-              <div class="data">
-                <h3>Day you've been waiting for</h3>
-                <small>Jan 7, 2021</small>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum cumque dolorem ipsum dicta quod aperiam expedita dolores odio laudantium unde laboriosam totam quidem, sapiente nam repellat. Tempore voluptates voluptatibus nostrum.</p>
-                <span class="close">Click to Close</span>
-              </div>
-            </li>
-          </ul>
-        </div>
-       </div>
-            <div id="vue_app">
+      
+            <div class="mb-5" id="vue_app">
                 <h2 class="examples" id="past">Past Websites</h2>
                 <div class="pages">
                   <!-- Render each category button -->
