--- a/index.html
+++ b/index.html
@@ -56,7 +56,42 @@
                 </div>
             </div>
         </div>
-      
+        <div class="container-1">
+          <div class="card">
+            <div class="image image1"></div>
+            <div class="info">
+              
+            </div>
+          </div>
+          <div class="card">
+            <div class="image image2"></div>
+            <div class="info">
+              <h2>About me</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus libero voluptatum sit! Sequi facere in tempora quibusdam mollitia provident aut?</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="image image3"></div>
+          </div>
+        </div>
+        <svg>
+          <filter id="wavy1">
+            <feturbulence x="0" y="0" baseFrequency="0.2" numOctaves="5" seed="1"></feturbulence>
+            <feDisplacementMap in="SourceGraphic" scale="20" />
+          </filter>
+        </svg>
+        <svg>
+          <filter id="wavy2">
+            <feturbulence x="0" y="0" baseFrequency="0.02" numOctaves="5" seed="1"></feturbulence>
+            <feDisplacementMap in="SourceGraphic" scale="20" />
+          </filter>
+        </svg>
+        <svg>
+          <filter id="wavy3">
+            <feturbulence x="0" y="0" baseFrequency="0.1" numOctaves="5" seed="1"></feturbulence>
+            <feDisplacementMap in="SourceGraphic" scale="20" />
+          </filter>
+        </svg>
             <div class="mb-5" id="vue_app">
                 <h2 class="examples" id="past">Past Websites</h2>
                 <div class="pages">
@@ -226,6 +261,13 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
-        ></script><script src="script.js"></script>
+        >
+      </script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.27/dist/lenis.min.js"></script>
+<!--Img scroll pre-code-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
+<script src="https://unpkg.com/@studio-freight/lenis@1.0.34/dist/lenis.min.js"></script>
+      <script src="script.js"></script>
     </body>
 </html>
