--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="item">
             <div class="polaroid">
               <div class="overlay-container">
-                <img src="img/image 1.png" alt="How I Got Started">
+                <img src="img/newjerseygas.jpg" alt="How I Got Started">
                 <div class="overlay-text">
 
                   <p>I became interested in videography when I started taking video editing in high school</p>
@@ -84,7 +84,7 @@
           <div class="item">
             <div class="polaroid">              
               <div class="overlay-container">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/LZkivxR.jpg" alt="How I Got Started">
+              <img src="img/newjerseygas.jpg" alt="How I Got Started">
               <div class="overlay-text">
 
                 <p>I am the main editor for my school's morning show and I have also won a New Jersey Natural Gas Video Competition</p>
@@ -97,7 +97,7 @@
           <div class="item">
             <div class="polaroid">
               <div class="overlay-container">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/hqcMtrF.jpg" alt="How I Got Started">
+              <img src="img/newjerseygas.jpg" alt="How I Got Started">
               <div class="overlay-text">
 
                 <p>After high school, I plan to continue video editing and am interested in editing blogs, montages, etc</p>
