changing some colors

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
               </nav>
         </header>
         <main>
-          <h1 class="reach text-align-center justify-content-center">Contact Me</h1>
+          <h1 class="banner text-align-center justify-content-center mb-5" id="form">Contact Me</h1>
 <!-- ======= Contact Section ======= -->
 <section id="contact" class="contact py-5" ">
   <div class="container">
@@ -70,7 +70,7 @@
 
           <!-- Reason for reaching out -->
           <div class="form-group mt-3 mb-3 p-3 rounded" style="background-color: #c0d1bd;">
-            <label class="contact-form-service-label mb-2">Reason for reaching out today:</label>
+            <label class="contact-form-service-label mb-2 text-light">Reason for reaching out today:</label>
             <div class="row">
               <div class="col-md-4 text-white">
                 <div><input type="radio" name="project_type" value="Scoreboard" required> Scoreboard</div>
@@ -94,9 +94,9 @@
           </div>
 
           <div class="my-3">
-            <div class="loading">Loading</div>
+            <div class="loading text-light">Loading</div>
             <div class="error-message"></div>
-            <div class="sent-message">Thank you for reaching out, Someone will be in contact with you ASAP about
+            <div class="sent-message text-light">Thank you for reaching out, Someone will be in contact with you ASAP about
               your email.</div>
           </div>
 
