--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
           
         <div class="wrapper">
-          <h1 class="story" id="past">My Story</h1>
+          <h1 class="banner" id="past">My Story</h1>
           <div class="item">
             <div class="polaroid">
               <div class="overlay-container">
@@ -111,7 +111,7 @@
         </div>
 
             <div class="mb-5" id="vue_app">
-                <h1 class="examples">Past Websites</h1>
+                <h1 class="banner" id="examples">Past Websites</h1>
                 <div class="pages">
                   <!-- Render each category button -->
                   <button 
