added contact icons

--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,34 @@
 
       <!-- Optional: Right column for contact info -->
       <div class="col-lg-4 p-4 rounded" style="background-color: #9EB69E;">
-        <h4 class="mb-3">Contact Information</h4>
+        <h3 class="my-3 mb-4 text-light">My Contact Info</h3>
+        <div class="contact-item">
+          <div class="contact-icon">
+              <img src="img/mail.png" alt="Email icon">
+          </div>
+          <div class="contact-text">
+              <h5 class="text-light">Email</h5>
+              <p><a href="mailto:DDiMartino@frhsd.com" class="text-white">DDiMartino@frhsd.com</a></p>
+            </div>
+      </div>
+      <div class="contact-item">
+        <div class="contact-icon">
+            <img src="img/location.png" class="insta"alt="Email icon">
+        </div>
+        <div class="contact-text">
+            <h5 class="text-light">Location</h5>
+            <p><a href="mailto:DDiMartino@frhsd.com" class="text-white">Marlboro, NJ</a></p>
+          </div>
+    </div>
+    <div class="contact-item">
+      <div class="contact-icon">
+          <img src="img/Instagram-Logo.png" class="insta" alt="Email icon">
+      </div>
+      <div class="contact-text">
+          <h5 class="text-light">Follow Me</h5>
+          <p><a href="mailto:DDiMartino@frhsd.com" class="text-white">@instagramaccount</a></p>
+        </div>
+  </div>
         <p><strong>Email:</strong><br><a href="mailto:DDiMartino@frhsd.com" class="text-white">DDiMartino@frhsd.com</a></p>
         <p><strong>Location:</strong><br>New Jersey Institute of Technology<br>Newark, NJ 07102</p>
         <p><strong>Follow Us:</strong><br>@instagramaccount</p>
@@ -125,38 +152,7 @@
 </section>
 
   
-  
-            <div class="col-lg-4">
-  
-              <div class="info">
-                <h3>Get in touch</h3>
-                <p>We look forward to hearing from you and discussing how we can help with your project. </p>
-  
-                <div class="info-item d-flex">
-                  <i class="bi bi-geo-alt flex-shrink-0"></i>
-                  <div>
-                    <h4>Location:</h4>
-                    <p>15 Boulder Trail</p>
-                    <p>Mahwah, NJ 07430</p>
-  
-                  </div>
-                </div><!-- End Info Item -->
-  
-                <div class="info-item d-flex">
-                  <i class="bi bi-envelope flex-shrink-0"></i>
-                  <div>
-                    <h4>Email:</h4>
-                    <p>email@something.com</p>
-                  </div>
-                </div><!-- End Info Item -->
-  
-                <div class="info-item d-flex">
-                  <i class="bi bi-phone flex-shrink-0"></i>
-                  <div>
-                    <h4>Call:</h4>
-                    <p>845.826.5862</p>
-                  </div>
-                </div><!-- End Info Item -->
+<!-- End Info Item -->
   
               </div>
   
