--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- place navbar here -->
         </header>
         <main>   
-          <nav class="navbar navbar-expand-lg">
+          <nav class="navbar navbar-expand-lg sticky-top">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html" id="logo"></a>
           
@@ -144,6 +144,8 @@
                 </div>
               </div>
         </main>
+              <!--Back to top button https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
+      <button class="up" onclick="topFunction()" id="myBtn"><a href="#top" class="arrow">^</a></button>
 <!-- Footer -->
 <footer class="text-center text-lg-start text-muted">
   <!-- Section: Social media -->
