--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="item">
             <div class="polaroid">
               <div class="overlay-container">
-                <img src="img/newjerseygas.jpg" alt="How I Got Started">
+                <img src="img/classroom.jpg" alt="How I Got Started">
                 <div class="overlay-text">
 
                   <p>I became interested in videography when I started taking video editing in high school</p>
