changed descriptions and images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img src="img/classroom.jpg" alt="How I Got Started">
                 <div class="overlay-text">
 
-                  <p>I became interested in videography when I started taking video editing in high school</p>
+                  <p>I became interested in videography when I started taking video editing in high school with Mr. Werntz, which led to other opportunities</p>
                 </div>
               </div>
               <div class="caption">How I Got Started</div>
@@ -87,7 +87,7 @@
               <img src="img/newjerseygas.jpg" alt="How I Got Started">
               <div class="overlay-text">
 
-                <p>I am the main editor for my school's morning show and I have also won a New Jersey Natural Gas Video Competition</p>
+                <p>I am the main editor for my school's morning show and I have also won the 2024 New Jersey Natural Gas Video Competition</p>
               </div>
             </div>
               <div class="caption">What I've Done</div>
@@ -97,10 +97,10 @@
           <div class="item">
             <div class="polaroid">
               <div class="overlay-container">
-              <img src="img/newjerseygas.jpg" alt="How I Got Started">
+              <img src="img/grad.jpg" alt="How I Got Started">
               <div class="overlay-text">
 
-                <p>After high school, I plan to continue video editing and am interested in editing blogs, montages, etc</p>
+                <p>After high school, I plan to continue video editing and build a name for myself. I am also interested in editing blogs and montages to expand my work</p>
               </div>
             </div>
               <div class="caption">Future Plans</div>
