added video landing section for skills page

--- a/contact.html
+++ b/contact.html
@@ -73,17 +73,17 @@
             <label class="contact-form-service-label mb-2 text-light">Reason for reaching out today:</label>
             <div class="row">
               <div class="col-md-4 text-white">
-                <div><input type="radio" name="project_type" value="Scoreboard" required> Scoreboard</div>
-                <div><input type="radio" name="project_type" value="Videoboard"> Videoboard</div>
-                <div><input type="radio" name="project_type" value="Stadium Lights"> Stadium Lights</div>
+                <div><input type="radio" name="project_type" value="Scoreboard" required> Service Questions</div>
+                <div><input type="radio" name="project_type" value="Videoboard"> Personal video</div>
+                <div><input type="radio" name="project_type" value="Stadium Lights"> Blogs</div>
               </div>
               <div class="col-md-4 text-white">
-                <div><input type="radio" name="project_type" value="Msg Center"> Msg Center</div>
+                <div><input type="radio" name="project_type" value="Msg Center"> Montages</div>
                 <div><input type="radio" name="project_type" value="Repair/Service"> Repair/Service</div>
-                <div><input type="radio" name="project_type" value="Scoreboard Rentals"> Scoreboard Rentals</div>
+                <div><input type="radio" name="project_type" value="Scoreboard Rentals"> Wedding Videos</div>
               </div>
               <div class="col-md-4 text-white">
-                <div><input type="radio" name="project_type" value="New Structure"> New Structure</div>
+                <div><input type="radio" name="project_type" value="New Structure"> Product Shoot</div>
                 <div><input type="radio" name="project_type" value="Other Installation"> Other Installation (Specify)</div>
               </div>
             </div>
