--- a/skills.html
+++ b/skills.html
@@ -45,6 +45,9 @@
               </nav>
         </header>
         <main>
+            <video autoplay loop muted plays-inline>
+              <source src="img/video1.mp4">
+            </video>
           <div class="skills">
           <h1 class="banner">My Skills</h1>
           <h3 class="instruction">Click each icon below to find out more</h3>
