modified background video sizing and added overlay text

--- a/skills.html
+++ b/skills.html
@@ -45,9 +45,15 @@
               </nav>
         </header>
         <main>
-            <video autoplay loop muted plays-inline>
-              <source src="img/video1.mp4">
+          <div class="landing">
+            <video autoplay loop muted playsinline>
+              <source src="img/video1.mp4" type="video/mp4">
             </video>
+          
+            <div class="content text-center">
+              <h1 class="display-1">My Skills</h1>
+            </div>
+          </div>
           <div class="skills">
           <h1 class="banner">My Skills</h1>
           <h3 class="instruction">Click each icon below to find out more</h3>
