--- a/skills.html
+++ b/skills.html
@@ -51,7 +51,7 @@
             </video>
           
             <div class="content text-center">
-              <h1 class="display-1">My Skills</h1>
+              <h1 class="display-1">My Experience</h1>
             </div>
           </div>
           <div class="skills">
