added images for gallery

--- a/skills.html
+++ b/skills.html
@@ -98,38 +98,38 @@
               <div class="row g-0">
                 <div class="col-md-4 col-sm-6">
                   <a href="#" class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1449748040579-354c191a7934?dpr=1&auto=format&crop=entropy&fit=crop&w=1199&h=799&q=80&cs=tinysrgb" alt="">
-                    <div class="col-pic"><h5>Title</h5></div>
+                    <img src="img/dslr.jpg" alt="">
+                    <div class="col-pic"><h5>Canon DSLR</h5></div>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <a href="#" class="gallery-item">
-                    <img src="https://images.unsplash.com/16/unsplash_525d7892901ff_1.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1199&h=794&q=80&cs=tinysrgb" alt="">
-                    <div class="col-pic"><h5>Title</h5></div>
+                    <img src="img/tripod.jpg" alt="">
+                    <div class="col-pic"><h5>Tripod</h5></div>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <a href="#" class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1458063048042-fa854e05b745?dpr=1&auto=format&crop=entropy&fit=crop&w=1199&h=800&q=80&cs=tinysrgb" alt="">
-                    <div class="col-pic"><h5>Title</h5></div>
+                    <img src="img/ulanzi.jpg" alt="">
+                    <div class="col-pic"><h5>RGB Camera Light</h5></div>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <a href="#" class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1471295253337-3ceaaedca402?dpr=1&auto=format&crop=entropy&fit=crop&w=1199&h=801&q=80&cs=tinysrgb" alt="">
-                    <div class="col-pic"><h5>Title</h5></div>
+                    <img src="img/mic.jpg" alt="">
+                    <div class="col-pic"><h5>Rode Microphone</h5></div>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <a href="#" class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1458639817867-2c9d4c5dcad4?dpr=1&auto=format&crop=entropy&fit=crop&w=1199&h=800&q=80&cs=tinysrgb" alt="">
-                    <div class="col-pic"><h5>Title</h5></div>
+                    <img src="img/remote.jpg" alt="">
+                    <div class="col-pic"><h5>Canon Remote</h5></div>
                   </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                   <a href="#" class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1473624566182-509e437512f4?dpr=1&auto=format&crop=entropy&fit=crop&w=1199&h=799&q=80&cs=tinysrgb" alt="">
-                    <div class="col-pic"><h5>Title</h5></div>
+                    <img src="img/windscreen.jpg" alt="">
+                    <div class="col-pic"><h5>Rode Windscreen</h5></div>
                   </a>
                 </div>
               </div>
