--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-white">
                   <h1 class="display-1">Hi! I'm Daniela,</h1>
                   <h1 class="display-1">A Videographer</h1>
-                  <div class="mt-4">
-                    <div class="click">
-                      <a href="#past"><button class="about btn btn-light">About Me</button></a>
-                      <a href="contact.html"><button class="contact btn btn-outline-light">Contact Me</button></a>
-                  </div>
-                  </div>
+<div class="mt-4">
+  <div class="click">
+    <a href="#past"><button class="btn about">About Me</button></a>
+    <a href="contact.html"><button class="btn contact btn-outline-light">Contact Me</button></a>
+  </div>
+</div>
                 </div>
             
                 <!-- Right Side -->
